--- a/Spot/Spot/Base.lproj/Main.storyboard
+++ b/Spot/Spot/Base.lproj/Main.storyboard
@@ -1,25 +1,134 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="8iy-LV-zzp">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Watchlist-->
+        <scene sceneID="gax-hd-hAv">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="ZS6-Wl-jVL" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="TLP-kA-krv"/>
+                        <viewControllerLayoutGuide type="bottom" id="bgE-LE-iiS"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <view key="view" contentMode="scaleToFill" id="EWt-NG-cyy">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Watchlist" image="Watchlist Icon" id="Z96-aV-sjp"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9GI-EH-x6s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="141" y="-100"/>
+        </scene>
+        <!--Library-->
+        <scene sceneID="aAT-Yk-uje">
+            <objects>
+                <viewController id="OLd-DB-Nq1" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="atD-JE-1Eu"/>
+                        <viewControllerLayoutGuide type="bottom" id="i8N-FI-K19"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ugJ-oG-h4p">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Library" image="Library Icon" id="wNy-Fs-k7c"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rxs-hd-dhG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1444" y="-586"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="hPg-J7-uM8">
+            <objects>
+                <viewController id="tuy-OF-VWA" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PEK-1D-hwu"/>
+                        <viewControllerLayoutGuide type="bottom" id="F11-0F-9lI"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tT8-n6-GRf">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" systemItem="search" id="jtA-Te-VrK"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dbg-yL-HQk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-679" y="442"/>
+        </scene>
+        <!--Discover-->
+        <scene sceneID="q93-KC-yL3">
+            <objects>
+                <navigationController id="yC9-pQ-NM4" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Discover" image="Discover Icon" id="ypc-mV-Q6b"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NoD-8o-3yf">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="SiU-Wd-SiO">
+                        <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
+                    <connections>
+                        <segue destination="ozc-iP-Q5H" kind="relationship" relationship="rootViewController" id="h9u-1t-VEF"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wBv-VK-vZt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-155" y="-897"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="1ed-ip-VuY">
+            <objects>
+                <viewController id="ozc-iP-Q5H" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="EfA-vW-bTe"/>
+                        <viewControllerLayoutGuide type="bottom" id="md1-DK-B1I"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="u6C-kR-hMT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="sjR-OQ-ugv"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Inz-8h-rfn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="264" y="-897"/>
+        </scene>
+        <!--Spot Tab Bar Controller-->
+        <scene sceneID="sb4-hl-ETF">
+            <objects>
+                <tabBarController id="8iy-LV-zzp" customClass="SpotTabBarController" customModule="Spot" customModuleProvider="target" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="l0W-oS-c6E">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="yC9-pQ-NM4" kind="relationship" relationship="viewControllers" id="tsm-58-EOh"/>
+                        <segue destination="ZS6-Wl-jVL" kind="relationship" relationship="viewControllers" id="pBE-oz-CDO"/>
+                        <segue destination="tuy-OF-VWA" kind="relationship" relationship="viewControllers" id="cCq-V1-eKH"/>
+                        <segue destination="OLd-DB-Nq1" kind="relationship" relationship="viewControllers" id="3Ps-ee-ii4"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Kg-x5-nZc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-713" y="-650"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Discover Icon" width="30" height="30"/>
+        <image name="Library Icon" width="30" height="30"/>
+        <image name="Watchlist Icon" width="30" height="30"/>
+    </resources>
 </document>
