--- a/Spot/Spot/Base.lproj/Main.storyboard
+++ b/Spot/Spot/Base.lproj/Main.storyboard
@@ -134,24 +134,24 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="y5w-tn-Ief">
-                                            <rect key="frame" x="15" y="50" width="305" height="195"/>
+                                            <rect key="frame" x="0.0" y="50" width="320" height="195"/>
                                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                             <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="e3f-3U-zVD">
-                                                <size key="itemSize" width="105" height="195"/>
+                                                <size key="itemSize" width="130" height="195"/>
                                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                 <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                             </collectionViewFlowLayout>
                                             <cells>
-                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DiscoverCollectionViewCell" id="KE0-is-Hkl">
-                                                    <rect key="frame" x="0.0" y="0.0" width="105" height="195"/>
+                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DiscoverCollectionViewCell" id="KE0-is-Hkl" customClass="SpotDiscoverCollectionViewCell" customModule="Spot" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="0.0" width="130" height="195"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                                        <rect key="frame" x="0.0" y="0.0" width="105" height="195"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="130" height="195"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <subviews>
-                                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch Screen" translatesAutoresizingMaskIntoConstraints="NO" id="Y96-1n-F7P">
-                                                                <rect key="frame" x="0.0" y="0.0" width="105" height="195"/>
+                                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Y96-1n-F7P">
+                                                                <rect key="frame" x="0.0" y="0.0" width="130" height="195"/>
                                                             </imageView>
                                                         </subviews>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -162,6 +162,9 @@
                                                         <constraint firstAttribute="bottom" secondItem="Y96-1n-F7P" secondAttribute="bottom" id="c7j-BR-iWU"/>
                                                         <constraint firstItem="Y96-1n-F7P" firstAttribute="top" secondItem="KE0-is-Hkl" secondAttribute="top" id="iLf-gT-DOH"/>
                                                     </constraints>
+                                                    <connections>
+                                                        <outlet property="imageView" destination="Y96-1n-F7P" id="Nth-Z4-53p"/>
+                                                    </connections>
                                                 </collectionViewCell>
                                             </cells>
                                         </collectionView>
@@ -210,7 +213,6 @@
     </scenes>
     <resources>
         <image name="Discover Icon" width="25" height="25"/>
-        <image name="Launch Screen" width="320" height="568"/>
         <image name="Library Icon" width="25" height="25"/>
         <image name="News Icon" width="25" height="25"/>
         <image name="Watchlist Icon" width="25" height="25"/>
