--- a/Spot/Spot/Base.lproj/Main.storyboard
+++ b/Spot/Spot/Base.lproj/Main.storyboard
@@ -4,6 +4,11 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="GothamMedium.otf">
+            <string>GothamMedium</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--Watchlist View-->
         <scene sceneID="gax-hd-hAv">
@@ -133,25 +138,25 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="244.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="y5w-tn-Ief">
+                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="y5w-tn-Ief">
                                             <rect key="frame" x="0.0" y="50" width="320" height="195"/>
                                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                             <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="e3f-3U-zVD">
-                                                <size key="itemSize" width="130" height="195"/>
+                                                <size key="itemSize" width="130" height="191"/>
                                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                <inset key="sectionInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                                             </collectionViewFlowLayout>
                                             <cells>
                                                 <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DiscoverCollectionViewCell" id="KE0-is-Hkl" customClass="SpotDiscoverCollectionViewCell" customModule="Spot" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="0.0" width="130" height="195"/>
+                                                    <rect key="frame" x="15" y="2" width="130" height="191"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                                        <rect key="frame" x="0.0" y="0.0" width="130" height="195"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="130" height="191"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <subviews>
-                                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Y96-1n-F7P">
-                                                                <rect key="frame" x="0.0" y="0.0" width="130" height="195"/>
+                                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch Screen" translatesAutoresizingMaskIntoConstraints="NO" id="Y96-1n-F7P">
+                                                                <rect key="frame" x="0.0" y="-4" width="130" height="195"/>
                                                             </imageView>
                                                         </subviews>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -160,7 +165,7 @@
                                                         <constraint firstAttribute="trailing" secondItem="Y96-1n-F7P" secondAttribute="trailing" id="78m-DF-jcL"/>
                                                         <constraint firstItem="Y96-1n-F7P" firstAttribute="leading" secondItem="KE0-is-Hkl" secondAttribute="leading" id="GoP-Fg-FoC"/>
                                                         <constraint firstAttribute="bottom" secondItem="Y96-1n-F7P" secondAttribute="bottom" id="c7j-BR-iWU"/>
-                                                        <constraint firstItem="Y96-1n-F7P" firstAttribute="top" secondItem="KE0-is-Hkl" secondAttribute="top" id="iLf-gT-DOH"/>
+                                                        <constraint firstItem="Y96-1n-F7P" firstAttribute="top" secondItem="KE0-is-Hkl" secondAttribute="top" constant="-4" id="iLf-gT-DOH"/>
                                                     </constraints>
                                                     <connections>
                                                         <outlet property="imageView" destination="Y96-1n-F7P" id="Nth-Z4-53p"/>
@@ -168,6 +173,12 @@
                                                 </collectionViewCell>
                                             </cells>
                                         </collectionView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Trending Movies" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VNg-Xz-UBw">
+                                            <rect key="frame" x="15" y="20" width="305" height="21"/>
+                                            <fontDescription key="fontDescription" name="GothamMedium" family="GothamMedium" pointSize="20"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </tableViewCellContentView>
@@ -213,6 +224,7 @@
     </scenes>
     <resources>
         <image name="Discover Icon" width="25" height="25"/>
+        <image name="Launch Screen" width="320" height="568"/>
         <image name="Library Icon" width="25" height="25"/>
         <image name="News Icon" width="25" height="25"/>
         <image name="Watchlist Icon" width="25" height="25"/>
